--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "combined-stream": "~0.0.4",
     "mime": "~1.2.2",
-    "async": "~0.1.9"
+    "async": "0.2.x"
   },
   "devDependencies": {
     "fake": "0.2.1",
